# Djassa-coach-

./: djassa_coach.db  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  run.py
Backend/: __init__.py  auth.py  database.py  gemini_service.py  main.py  models.py  schemas.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
